<resources>
    <string name="app_name">Tree</string>
    <string name="subtitle">Better Learning, Better Growth</string>
    <string name="logo">logo</string>
    <string name="signIn">sign in button</string>
    <string name="signUp">sign up button</string>

    <string name="dialog_title">添加任务</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="task_type">类型</string>
    <string name="time_limit">限时(min)</string>
    <string name="read_task">内置</string>
    <string name="start_time">开始时间</string>
    <string name="time_set">选择时间</string>
    <string name="end_time">截止时间</string>
    <string name="typical_task">普通</string>
    <string name="minute">分钟</string>
    <string name="repeat_time">重复</string>
    <string name="select_repeat">选择重复</string>
    <string name="task_content_hint">在此输入任务内容</string>
    <string name="year">年</string>
    <string name="dash">-</string>
    <string name="pickup">筛选</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="service_rule"><u>服务条款</u></string>
    <string name="click"><u>clicked</u></string>
    <string name="signup">注册</string>
    <string name="signin">登录</string>
    <string name="date">请选择日期</string>
    <string name="add_task">add task</string>
    <string name="delete_task">delete task</string>
    <string name="filter">filter</string>
    <string name="resource">resource</string>
    <string name="title">标题</string>
    <string name="content">内容</string>
    <string name="hint_icon">hint icon</string>

    <string name="topColumn">topcolumn</string>
    <string name="topImage">topimage</string>
    <string name="taskImage">taskimage</string>
    <string name="texttimeImage">texttimeimage</string>
    <string name="updateImage">updateimage</string>
    <string name="titleUserSetting">" 账号设置"</string>
    <string name="namechange">"用户名称更改"</string>
    <string name="passwordchange">"用户密码修改"</string>
    <string name="portraitchange">"用户头像更改"</string>
    <string name="titleMessageNotification">"消息提醒"</string>
    <string name="tasknotification">"任务日常提醒"</string>
    <string name="testtimenotification">"考试时间倒计时"</string>
    <string name="titleHelp">"帮助"</string>
    <string name="suggestion">"用户反馈与建议"</string>
    <string name="contactus">"联系我们"</string>
    <string name="titleOthers">"其他"</string>
    <string name="version">"版本"</string>
    <string name="clean">"清除缓存"</string>
    <string name="quit">"退出登录"</string>
    <string name="store">商店</string>
    <string name="back">返回</string>
    <string name="itemname">ItemName</string>
    <string name="performence">Performence</string>
    <string name="service_item">Tree App服务条款</string>
    <string name="service_content_0">欢迎您使用Tree APP服务！</string>
    <string name="service_content_1">为使用Tree APP平台服务，您应当阅读并遵守《Tree App服务条款
》（以下简称“本协议”）。请您务必审慎阅读、充分理解各条款内容，特别是免除或者限制责任的条款、管辖与法律适用条款。限制、免责条款可能以加粗或加下划线的形式提示您重点注意。除非您已阅读并接受本协议所有条款，否则您无权使用Tree APP提供的服务，您使用Tree APP平台的服务即视为您已阅读并同意上述协议的约束。
如果您未满18周岁，请在法定监护人的陪同下阅读本协议，并特别注意未成年人使用条款。</string>
    <string name="service_content_2">1. Tree APP是由江南大学大创团队提供的移动客户端解决方案，并由学生自行运行维护；本协议是您与开发者APP相关服务所订立的协议。
</string>
    <string name="service_content_3">2.遵守国家法律。
</string>
    <string name="service_content_4">3.遵循社会道德。
</string>
    <string name="mail_address">邮箱地址</string>
    <string name="vali_code">输入验证码</string>
    <string name="word">验证码已发送至您的邮箱 请登录邮箱完成验证</string>
    <string name="chart_title1">任务类型统计</string>
    <string name="char_title_3">任务完成率统计</string>
    <string name="chart_title_2">新建任务统计</string>
    <string name="setting">设置</string>

</resources>
