<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_round_white"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="32sp"
        android:textColor="@color/dialog_text"
        android:text="@string/title"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:contentDescription="@string/hint_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/blue_circle"
            android:layout_weight="2.0"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/dialog_text"
            android:text="@string/content"
            android:gravity="center_vertical"
            android:layout_weight="1.0"
            android:textSize="20sp"
            />
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/left_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_dialog_left_white"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/cancel"
            android:textSize="20sp"
            android:textColor="@color/dialog_text"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/light_gray"/>

        <TextView
            android:id="@+id/right_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_dialog_right_white"
            android:gravity="center"
            android:layout_weight="1.0"
            android:text="@string/confirm"
            android:textSize="20sp"
            android:textColor="@color/dialog_text"/>

    </LinearLayout>

</LinearLayout>