<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:background="@drawable/bg_round_white"
              android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/dialog_title"

        android:textSize="20sp"
        android:textColor="@color/dark_green"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/dark_green"
            android:text="@string/task_type"
            android:textSize="16sp"
            android:layout_weight="2.0"/>

        <RadioGroup
            android:id="@+id/type_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1.0">

            <RadioButton
                android:id="@+id/typical_task"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/typical_task"
                android:layout_weight="1.0"
                android:textColor="@color/dark_green"
                android:button="@drawable/radio_button"
                />

            <RadioButton
            android:id="@+id/inherent_task"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/read_task"
            android:layout_weight="1.0"
            android:textColor="@color/dark_green"
            android:button="@drawable/radio_button"
            />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_time"
            android:textSize="16sp"

            android:layout_weight="2.0"
            android:gravity="center"
            android:textColor="@color/dark_green"/>



        <Button
            android:id="@+id/time_select1"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/time_set"
            android:background="@drawable/reverse_button"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_weight="1.0"/>



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/end_time"
            android:layout_weight="2.0"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/dark_green"/>

        <Button
            android:id="@+id/time_select2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="2dp"
            android:text="@string/time_set"
            android:background="@drawable/sign_in_button"
            android:textColor="@color/white"

            android:textSize="16sp"
            android:layout_weight="1.0"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2.0"
            android:gravity="center_horizontal|center_vertical"

            android:text="@string/time_limit"
            android:textColor="@color/dark_green"
            android:textSize="16sp"/>


        <org.angmarch.views.NiceSpinner
            android:id="@+id/time_limit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:textTint="@color/dark_green"
            app:arrowTint="@color/dark_green"
            android:layout_weight="1.0"
            />




    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/task_content"
            android:layout_width="0dp"
            android:hint="@string/task_content_hint"
            android:layout_height="72dp"
            android:layout_weight="1.0"
            android:ems="10"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="4dp"
            android:background="@drawable/edit_text"
            android:layout_marginBottom="10dp"
            />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_dialog_left_white"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/cancel"
            android:textSize="16sp"
            android:textColor="@color/dark_green"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/light_gray"/>

        <TextView
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_dialog_right_white"
            android:gravity="center"
            android:layout_weight="1.0"
            android:text="@string/confirm"
            android:textSize="16sp"
            android:textColor="@color/dark_green"/>

    </LinearLayout>

</LinearLayout>