<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/settings_bkg"
    tools:context=".SettingsActivity"
    android:orientation="vertical"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/topColumn"
            android:layout_width="match_parent"
            android:layout_height="85dp"

            android:contentDescription="@string/topColumn"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toTopOf="@+id/scrollView2"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/settings_topcolumn"/>

        <ImageView
            android:id="@+id/topimage"
            android:layout_width="62dp"
            android:layout_height="66dp"
            android:layout_gravity="left|bottom"
            android:layout_marginBottom="6dp"
            android:adjustViewBounds="false"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/settings_topimage"/>
    </FrameLayout>
    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#f9f2ef">

                <TextView
                    android:id="@+id/textuser"
                    android:layout_width="wrap_content"
                    android:layout_height="22dp"
                    android:layout_gravity="bottom"
                    android:paddingLeft="24dp"
                    android:text="@string/titleUserSetting"
                    android:textColor="#96b5b4"
                    android:textSize="12sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/settings_columnwithoutprojection">

                <TextView
                    android:id="@+id/changepassword"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:gravity="left|center"
                    android:paddingLeft="24dp"
                    android:text="@string/passwordchange"
                    android:textColor="#231815"
                    android:textSize="14sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#f9f2ef">

                <TextView
                    android:id="@+id/messagenotification"
                    android:layout_width="wrap_content"
                    android:layout_height="22dp"
                    android:layout_gravity="bottom"
                    android:paddingLeft="24dp"
                    android:text="@string/titleMessageNotification"
                    android:textColor="#96b5b4"
                    android:textSize="12sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/settings_columnwithoutprojection"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tasknotification"
                    android:layout_width="310dp"
                    android:layout_height="52dp"
                    android:layout_weight="1.0"
                    android:gravity="left|center"
                    android:paddingLeft="24dp"
                    android:text="@string/tasknotification"
                    android:textColor="#231815"
                    android:textSize="14sp"/>

                <ImageView
                    android:id="@+id/taskimage"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_weight="1.0"
                    android:layout_gravity="center"
                    android:layout_marginEnd="24dp"

                    android:contentDescription="@string/taskImage"
                    app:srcCompat="@drawable/settings_treebuttonof"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#f9f2ef">

                <TextView
                    android:id="@+id/help"
                    android:layout_width="wrap_content"
                    android:layout_height="22dp"
                    android:layout_gravity="bottom"
                    android:paddingLeft="24dp"
                    android:text="@string/titleHelp"
                    android:textColor="#96b5b4"
                    android:textSize="12sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/settings_columnwithoutprojection">

                <TextView
                    android:id="@+id/suggestion"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:gravity="left|center"
                    android:paddingLeft="24dp"
                    android:text="@string/suggestion"
                    android:textColor="#231815"
                    android:textSize="14sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/settings_columnwithoutprojection">

                <TextView
                    android:id="@+id/contactus"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:gravity="left|center"
                    android:paddingLeft="24dp"
                    android:text="@string/contactus"
                    android:textColor="#231815"
                    android:textSize="14sp"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#f9f2ef">

                <TextView
                    android:id="@+id/others"
                    android:layout_width="wrap_content"
                    android:layout_height="22dp"
                    android:layout_gravity="bottom"
                    android:paddingLeft="24dp"
                    android:text="@string/titleOthers"
                    android:textColor="#96b5b4"
                    android:textSize="14sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/settings_columnwithoutprojection">

                <TextView
                    android:id="@+id/version"
                    android:layout_width="310dp"
                    android:layout_height="52dp"
                    android:gravity="left|center"
                    android:paddingLeft="24dp"
                    android:text="@string/version"
                    android:textColor="#231815"
                    android:textSize="14sp"/>

                <ImageView
                    android:id="@+id/versionimage"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="24dp"
                    android:contentDescription="@string/updateImage"
                    app:srcCompat="@drawable/settings_updatebuttonof"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/settings_columnwithoutprojection">

                <TextView
                    android:id="@+id/quit"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:gravity="left|center"
                    android:paddingLeft="24dp"
                    android:text="@string/quit"
                    android:textColor="#231815"
                    android:textSize="14sp"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="275dp"
                android:background="@drawable/settings_bkg"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="match_parent"
                    android:layout_marginTop="64dp"
                    android:layout_height="72dp"
                    app:srcCompat="@drawable/rooter0"/>

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:paddingLeft="32dp"
                    app:srcCompat="@drawable/rooter1"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/footer_bar"/>

</LinearLayout>
