<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_round_white"
    android:orientation="vertical">
    <TextView
        android:layout_marginTop="12dp"
        android:id="@+id/alert_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="32sp"
        android:textColor="@color/dialog_content"
        android:text="@string/title"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="12dp">
        <ImageView
            android:id="@+id/alert_icon"
            android:contentDescription="@string/hint_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/frog"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"/>


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">



        <TextView
            android:id="@+id/alert_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:gravity="center"
            android:text="@string/confirm"
            android:textSize="20sp"
            android:textColor="@color/dialog_content"/>

    </LinearLayout>

</LinearLayout>